--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "react": "18.2.0",
+    "react-datetime-picker": "^5.6.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^10.0.3"
   },
